objects/vlocity_ins__PicklistSelectionEntry__c.object
<CustomObject>
    <description>DEPRECATED. Use Vlocity Picklist Values.</description>
    <fields>
        <fullName>vlocity_ins__Abbreviation__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.</description>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataType__c</fullName>
        <description>DEPRECATED.</description>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DateTimeValue__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Time Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DateValue__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayAs__c</fullName>
        <description>DEPRECATED.</description>
        <label>Display As</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Image + Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayText__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Display Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalId__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Global Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>DEPRECATED.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.</description>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberValue__c</fullName>
        <description>DEPRECATED.</description>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PicklistId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED.</description>
        <label>Picklist</label>
        <referenceTo>vlocity_ins__Picklist__c</referenceTo>
        <relationshipLabel>Picklist Selection Entries</relationshipLabel>
        <relationshipName>PicklistSelectionEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <description>DEPRECATED.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TextValue__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnitOfMeasureElementName__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit Of Measure Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Value__c</fullName>
        <description>DEPRECATED.</description>
        <formula>IF(  ISPICKVAL(vlocity_ins__DataType__c, &apos;Date/Time&apos;) ,  TEXT(vlocity_ins__DateTimeValue__c) , 
    IF( ISPICKVAL(vlocity_ins__DataType__c, &apos;Date&apos;) ,  TEXT(vlocity_ins__DateValue__c) , 
        IF( ISPICKVAL(vlocity_ins__DataType__c, &apos;Text&apos;),  vlocity_ins__TextValue__c , 
            IF( ISPICKVAL(vlocity_ins__DataType__c, &apos;Number&apos;) ,  TEXT(vlocity_ins__NumberValue__c) , 
                IF( ISPICKVAL(vlocity_ins__DataType__c, &apos;Boolean&apos;)  ,  IF( vlocity_ins__BooleanValue__c = true  ,  &apos;true&apos; , &apos;false&apos; ), null )))))</formula>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <label>Picklist Selection Entry</label>
    <nameField>
        <displayFormat>PSE-{00000}</displayFormat>
        <label>Picklist Selection Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picklist Selection Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>